@@ -10,29 +10,31 @@ function fire() {
             '{title}': title,
             '{表演者}': artist
         };
-
         $('.gact', this).parent('p').append($('<a href="#">')
             .attr('class', 'gcnsearch'+idx)
             .text("查询")
             .click(function() {
-                chrome.extension.sendRequest({info:info, sendback:idx});
+                chrome.extension.sendRequest({meta:info, sendback:idx});
                 return false;
             }));
     });
 }
 
-function show(idx, url, res) {
+function show(idx, title, url, albums) {
     var gcnsearch = $(".gcnsearch"+idx);
-    if (res.length <= 0) {
+    if (albums.length <= 0) {
         gcnsearch.after($("<strong>").text('无'));
     } else {
-        gcnsearch.parents('table').after(albums_div(res));
+        gcnsearch.parents('table').after(albums_div(title, url, albums));
     }
-    gcnsearch.remove();
 }
 
 chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
-    show(request.sendback, request.url, request.res);
+    var sendback = request.sendback;
+    var title = request.title;
+    var url = request.url;
+    var albums = request.albums;
+    show(sendback, title, url, albums);
     sendResponse({});
 });
 
